Mon Sep  1 22:30:33 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* numbers.c (logand, logior, logxor): Handle 0 or 1 arguments.

Sat Aug 30 18:56:19 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* unif.c (scm_shap2ra): tighten the checking of the array dimension
	specifier, since (2) or (2 . 3) would cause SEGV.
	(scm_transpose_array): more argument checking fixes.

Wed Aug 27 17:44:44 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.in: Regenerated, so it uses "tar", not "gtar".

Mon Aug 25 13:47:25 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* error.c, error.h (scm_error_callback): Removed (see NEWS).

Sun Aug 24 01:25:35 1997  Mikael Djurfeldt  <mdj@kenneth>

	* regex-posix.c: If <regex.h> can't be found, try <rxposix.h> or
	<rx/rxposix.h>.  (This is in order to accomodate for the GNU Rx
	library.)

	* ramap.c (scm_ra_matchp, scm_array_fill_int, racp, ramap_1,
 	ramap_2o, scm_array_index_map_x, raeql_1, scm_array_equal_p),
 	unif.c (scm_vector_set_length_x, scm_uniform_vector_length,
 	scm_array_p, scm_array_rank, scm_array_dimensions,
 	scm_enclose_array, scm_array_in_bounds_p, scm_uniform_vector_ref,
	scm_cvref, scm_array_set_x, scm_array_contents, scm_array_to_list,
 	scm_array_prototype): Added case scm_tc7_wvect.

Sat Aug 23 18:45:44 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* errno.h: prototype for scm_strerror.
	* error.c (scm_strerror): new procedure.

Mon Aug 18 14:58:22 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* list.c (scm_list_append_x): Allow non-pair as last argument.
	This is consistent with the R4RS append and is probably the
	correct behaviour as specified by R2RS.  (Thanks to Radey Shouman)

Sat Aug 16 18:42:15 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* stime.h: prototype for scm_times.
	* stime.c (scm_times): new procedure.
	* ioext.c (scm_fseek): if the first argument is a file descriptor
	call lseek.
	(scm_ftell): if the first argument is a file descriptor call lseek
	(sic).